make test more effective